--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -819,7 +819,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 <!-- FOOTER -->
-<footer class="bg-black text-gray-500 text-xs text-center py-8 px-4">
+<footer class="bg-black text-gray-500 text-[8px] text-center py-8 px-4">
   
   <!-- Imagem pequena acima do texto -->
 <br><br>
