--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -113,7 +113,7 @@
 </script>
 
 
- <!--
+ <!-- REDIRECIONADOR
 <script>
   const params = window.location.search;
   let destino = "https://bigoffer.netlify.app/oraculo/";
@@ -125,7 +125,14 @@
 
   window.location.href = destino;
 </script>
+-->
 
+
+
+
+<!--   IMAGENS HERO
+mão na boca: https://i.imgur.com/rE9pIj5.png      
+saco de dinheiro: https://i.imgur.com/0lYJNhC.png 
 -->
 
 
@@ -135,16 +142,7 @@
 <section class="relative px-6 pt-12 pb-4 lg:pt-16 lg:pb-4 bg-black">
   <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
  
-    <!-- Imagem HERO --> 
-     
-<!--  mão 
-na boca: https://i.imgur.com/rE9pIj5.png      
-saco de dinheiro: https://i.imgur.com/0lYJNhC.png 
-
-      
--->
-
-
+<!-- Imagem HERO --> 
 <div class="flex justify-center lg:order-2">
   <img 
     src="https://i.imgur.com/mAeoG48.png"      
@@ -167,6 +165,7 @@ saco de dinheiro: https://i.imgur.com/0lYJNhC.png
   animation: zoomInOutSutil 6s ease-in-out infinite;
 }
 </style>
+
 
 
  <!-- Texto -->
