--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -133,6 +133,7 @@
 <!--   IMAGENS HERO
 mão na boca: https://i.imgur.com/rE9pIj5.png      
 saco de dinheiro: https://i.imgur.com/0lYJNhC.png 
+mão manipulado: https://i.imgur.com/o4XQhvi.png
 -->
 
 
