--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -461,19 +461,19 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span><strong><span class="text-red-500">BONO:</span></strong> Manual de Comunicación de Alto Impacto</span>
+    <span><strong><span class="text-red-500">BONO #1:</span></strong> Manual de Comunicación de Alto Impacto</span>
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span><strong><span class="text-red-500">BONO:</span></strong> Libros Prohibidos para generar riqueza</span>
+    <span><strong><span class="text-red-500">BONO #2:</span></strong> Libros Prohibidos para generar riqueza</span>
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span><strong><span class="text-red-500">BONO:</span></strong> Contenido exclusivo de grandes mentorías</span>
+    <span><strong><span class="text-red-500">BONO #3:</span></strong> Contenido exclusivo de grandes mentorías</span>
   </li>
   <li class="flex items-start gap-2">
     <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
-    <span>Acceso <strong>Vitalicio</strong> al Área de Miembros</span>
+    <span>Acceso <strong>Vitalicio</strong> al Área de Miembros 🎁</span>
   </li>
 </ul>
     
