--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -478,33 +478,47 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 </ul>
     
   
-    <!-- Preço -->
-    <div class="text-center mb-4">
-      <p class="text-base mb-2 text-gray-200">
-        De <s class="text-red-500">$ 57,90</s> por
-      </p>
-<div class="flex items-center justify-center gap-2 leading-none">
-  
-  <span class="text-6xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
-    $ 7,90
+<!-- Preço -->
+<div class="text-center mb-4">
+  <p class="text-base mb-2 text-gray-200">
+    De <s class="text-red-500">$ 57,90</s> por
+  </p>
+
+  <div class="flex items-center justify-center gap-2 leading-none">
+    <span class="text-6xl sm:text-7xl font-extrabold text-green-400 drop-shadow-[0_0_20px_rgba(34,197,94,0.9)]">
+      $ 7,90
+    </span>
+  </div>
+
+  <div class="mt-1 text-gray-200 text-base">*Solo por hoy $50 OFF</div>
+</div><br>
+
+<!-- Prova social -->
+<p class="text-center text-yellow-400 font-semibold mb-2">
+  ⭐⭐⭐⭐⭐ + de 5.000 miembros
+</p>
+
+<!-- Botão CTA -->
+<a href="https://pay.hotmart.com/C102252201D?checkoutMode=10"
+   class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg">
+  DESBLOQUEAR EL CÓDIGO
+  <br>
+  <span class="block text-sm font-normal text-white/80 mt-1">
+    Recibe el acceso inmediatamente
   </span>
-</div>
+</a>
 
-      <div class="mt-1 text-gray-200 text-base">*Solo por hoy $50 OFF</div>
-    </div><br>
-
-    <!-- Botão CTA -->
-    <a href="https://pay.hotmart.com/C102252201D?checkoutMode=10"
-       class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg">
-    DESBLOQUEAR EL CÓDIGO
-    </a>
-
-    <!-- Rodapé com imagem colada no botão -->
 <!-- Rodapé com imagem colada no botão -->
 <div class="flex justify-center mt-4">
   <img src="https://i.imgur.com/YUJAO1q.png" 
        class="w-56 h-auto opacity-95">
 </div>
+
+
+
+
+
+
   </div>
 </div>
 
