--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -478,6 +478,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 </ul>
     
   
+
 <!-- Preço -->
 <div class="text-center mb-4">
   <p class="text-base mb-2 text-gray-200">
@@ -494,16 +495,15 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 </div><br>
 
 <!-- Prova social -->
-<p class="text-center text-yellow-400 font-semibold mb-2">
+<p class="text-center text-yellow-400 text-sm font-light mb-2">
   ⭐⭐⭐⭐⭐ + de 5.000 miembros
 </p>
 
 <!-- Botão CTA -->
 <a href="https://pay.hotmart.com/C102252201D?checkoutMode=10"
-   class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg">
+   class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg leading-tight">
   DESBLOQUEAR EL CÓDIGO
-  <br>
-  <span class="block text-sm font-normal text-white/80 mt-1">
+  <span class="block text-sm font-normal text-white/80 mt-0.5">
     Recibe el acceso inmediatamente
   </span>
 </a>
