--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -500,7 +500,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 <a href="https://pay.hotmart.com/C102252201D?checkoutMode=10"
    class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg leading-tight">
   DESBLOQUEAR EL CÓDIGO
-  <span class="block text-sm font-normal text-white/80 mt-0.5">
+  <span class="block text-sm font-normal text-white/80 mt-0.1">
     Recibe el acceso inmediatamente
   </span>
 </a>
@@ -510,12 +510,11 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   <img src="https://i.imgur.com/YUJAO1q.png" 
        class="w-56 h-auto opacity-95">
 </div>
-<br>
-<!-- Prova social -->
-<p class="text-center text-yellow-400 text-sm font-light mb-2">
-  ⭐⭐⭐⭐⭐ + de 5.000 miembros
-</p>
 
+
+<!-- <p class="text-center text-yellow-400 text-sm font-light mb-2">
+  ⭐⭐⭐⭐⭐ + de 5.000 miembros
+</p>-->
 
 
 
