--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -512,12 +512,6 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 </div>
 
 
-<!-- <p class="text-center text-yellow-400 text-sm font-light mb-2">
-  ⭐⭐⭐⭐⭐ + de 5.000 miembros
-</p>-->
-
-
-
 
   </div>
 </div>
@@ -832,6 +826,9 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
      class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
      ✅ QUIERO ACCEDER AHORA
   </a>
+   <p class="text-center text-yellow-400 text-sm font-light mb-2">
+  ⭐⭐⭐⭐⭐ + de 5.000 miembros
+</p>
 
 <br>
 <br>
@@ -847,9 +844,8 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   <!-- Imagem pequena acima do texto -->
 <br><br>
 
- <p><strong>El Código de la [P]ersuación</strong> - Todos los derechos reservados.<br>
-  ESTE SITIO NO ES DE FACEBOOK. Este sitio no forma parte del sitio de Facebook ni de Facebook Inc.<br>
-  FACEBOOK es una marca comercial independiente de FACEBOOK, Inc.</p><br><br>
+ <p><strong>El Código de la [P]ersuación</strong> - Todos los derechos reservados.</p>
+ <br><br>
 </footer>
 
 
