--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -187,7 +187,7 @@ mão manipulado: https://i.imgur.com/o4XQhvi.png
     🔒 DESBLOQUEAR CÓDIGO 
   </a>
   <p class="text-sm text-gray-400" style="margin-top: 18px;">
-    *Solo por hoy. Vuelve a esta <br>página y perderás el acceso exclusivo.
+    *Solo por hoy. Vuelve a esta página<br> y perderás el acceso exclusivo.
   </p>
 </div>
 
