--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -822,11 +822,14 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 <br>
  <p class="text-gray-300 mb-8"><b>¡CUIDADO!</b> ¡No uses estas técnicas para el mal! 
   </p>
-  <a href="https://pay.hotmart.com/C102252201D?checkoutMode=10" 
-     class="bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante">
-     ✅ QUIERO ACCEDER AHORA
-  </a>
-   <p class="text-center text-yellow-400 text-sm font-light mb-2">
+ <!-- Botão CTA -->
+<a href="https://pay.hotmart.com/C102252201D?checkoutMode=10" 
+   class="block bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg">
+   ✅ QUIERO ACCEDER AHORA
+</a>
+
+<!-- Estrelas -->
+<p class="text-center text-yellow-400 text-sm font-light mt-2">
   ⭐⭐⭐⭐⭐ + de 5.000 miembros
 </p>
 
