--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -847,7 +847,14 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   <!-- Imagem pequena acima do texto -->
 <br><br>
 
- <p><strong>El Código de la [P]ersuación</strong> - Todos los derechos reservados.</p>
+<div class="text-center mt-6">
+  <img src="https://i.imgur.com/qTtFLJe.png" 
+       alt="Logo El Código de la Persuasión" 
+       class="mx-auto w-10 h-auto mb-1">
+  <p><strong>El Código de la [P]ersuación</strong> - Todos los derechos reservados.</p>
+</div>
+
+
  <br><br>
 </footer>
 
