--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -823,9 +823,12 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
  <p class="text-gray-300 mb-8"><b>¡CUIDADO!</b> ¡No uses estas técnicas para el mal! 
   </p>
  <!-- Botão CTA -->
-<a href="https://pay.hotmart.com/C102252201D?checkoutMode=10" 
-   class="block bg-green-500 text-white font-bold py-4 px-8 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg">
-   ✅ QUIERO ACCEDER AHORA
+<a href="https://pay.hotmart.com/C102252201D?checkoutMode=10"
+   class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg leading-tight">
+  ✅ QUIERO ACCEDER AHORA
+  <span class="block text-sm font-normal text-white/80 mt-0.5">
+    Aproveite $50 de desconto
+  </span>
 </a>
 
 <!-- Estrelas -->
