--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -827,7 +827,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
    class="block bg-green-500 hover:bg-green-600 text-white font-bold py-4 px-6 rounded-lg text-lg transition-all btn-pulsante text-center shadow-lg leading-tight">
   ✅ QUIERO ACCEDER AHORA
   <span class="block text-sm font-normal text-white/80 mt-0.5">
-    Aproveite $50 de desconto
+    Aprovecha $50 de descuento
   </span>
 </a>
 
