<!-- Lista de beneficios --> <ul class="mx-auto max-w-[300px] text-left mb-6 space-y-3 text-white/90 text-sm sm:text-base leading-snug">   <li class="flex items-center gap-2">     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>     <span><strong class="text-white">Código Completo de Persuasión</strong></span>   </li>   <li class="flex items-center gap-2">     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>     <span>Versión en <strong>Audiolibro</strong> Completa</span>   </li>   <li class="flex items-center gap-2">     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>     <span><strong><span class="text-red-500">BONO #1:</span></strong> Manual de Comunicación de Alto Impacto</span>   </li>   <li class="flex items-center gap-2">     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>     <span><strong><span class="text-red-500">BONO #2:</span></strong> Libros Prohibidos para generar riqueza</span>   </li>   <li class="flex items-center gap-2">     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>     <span><strong><span class="text-red-500">BONO #3:</span></strong> Contenido exclusivo de grandes mentorías</span>   </li>   <li class="flex items-center gap-2">     <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>     <span>Acceso <strong>Vitalicio</strong> al Área de Miembros 🎁</span>   </li> </ul>

--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -449,34 +449,34 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   EL CÓDIGO DE LA [P]ERSUASIÓN
 </h3>
 
-    <!-- Lista de beneficios -->
-<ul class="mx-auto max-w-[300px] text-left mb-6 space-y-3 text-white/90 text-sm sm:text-base">
-  <li class="flex items-start gap-2">
-    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+  <!-- Lista de beneficios -->
+<ul class="mx-auto max-w-[300px] text-left mb-6 space-y-3 text-white/90 text-sm sm:text-base leading-snug">
+  <li class="flex items-center gap-2">
+    <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span><strong class="text-white">Código Completo de Persuasión</strong></span>
   </li>
-  <li class="flex items-start gap-2">
-    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+  <li class="flex items-center gap-2">
+    <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span>Versión en <strong>Audiolibro</strong> Completa</span>
   </li>
-  <li class="flex items-start gap-2">
-    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+  <li class="flex items-center gap-2">
+    <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span><strong><span class="text-red-500">BONO #1:</span></strong> Manual de Comunicación de Alto Impacto</span>
   </li>
-  <li class="flex items-start gap-2">
-    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+  <li class="flex items-center gap-2">
+    <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span><strong><span class="text-red-500">BONO #2:</span></strong> Libros Prohibidos para generar riqueza</span>
   </li>
-  <li class="flex items-start gap-2">
-    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+  <li class="flex items-center gap-2">
+    <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span><strong><span class="text-red-500">BONO #3:</span></strong> Contenido exclusivo de grandes mentorías</span>
   </li>
-  <li class="flex items-start gap-2">
-    <span class="flex-shrink-0 mt-0.5 text-red-500 text-lg">✓</span>
+  <li class="flex items-center gap-2">
+    <span class="flex-shrink-0 mt-[1px] text-red-500 text-lg leading-none">✓</span>
     <span>Acceso <strong>Vitalicio</strong> al Área de Miembros 🎁</span>
   </li>
 </ul>
-    
+
   
 
 <!-- Preço -->
