--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -833,7 +833,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 <!-- Estrelas -->
 <p class="text-center text-yellow-400 text-sm font-light mt-3">
-  ⭐⭐⭐⭐⭐ + de 5.000 miembros
+  ★★★★★ + de 5.000 miembros
 </p>
 
 <br>
