--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -146,7 +146,7 @@ mão manipulado: https://i.imgur.com/o4XQhvi.png
 <!-- Imagem HERO --> 
 <div class="flex justify-center lg:order-2">
   <img 
-    src="https://i.imgur.com/mAeoG48.png"      
+    src="https://i.imgur.com/GQhgSxH.png"      
     class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom-sutil"
   />
 </div>
