--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -911,7 +911,7 @@ const NOMES = [
     const uf   = randItem(UFS);
 
 const toast = document.createElement("div");
-toast.className = "pointer-events-auto toast-enter flex items-start gap-3 w-[320px] max-w-[92vw] p-4 rounded-2xl text-white shadow-2xl border border-white/10 backdrop-blur-md";
+toast.className = "toast-enter flex items-start gap-3 w-[320px] max-w-[92vw] p-4 rounded-2xl text-white shadow-2xl border border-white/10 backdrop-blur-md";
 toast.style.background = "rgba(19,19,19,0.85)"; 
 toast.innerHTML = `
   <div class="shrink-0 mt-0.5">${CHECK_SVG}</div>
