--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -1039,21 +1039,25 @@ function getParams() {
 </script>
 
 
-<script> //zona clicavem da hero para avançar para dobra 2
+ 
+<script>//zona clicavem da hero para avançar para dobra 2
 document.addEventListener("DOMContentLoaded", () => {
-  const hero = document.querySelector("section.relative"); // seção do HERO
-  const target = document.querySelector("#oque"); // destino do scroll
+  const hero = document.querySelector("section.relative"); // HERO principal
+  const target = document.querySelector("#oque"); // segunda seção (#oque)
 
   if (hero && target) {
     hero.addEventListener("click", (e) => {
-      const rect = hero.getBoundingClientRect();
-      const y = e.clientY - rect.top; // posição do clique dentro do hero
+      // Só funciona se o usuário estiver no topo (primeira dobra)
+      if (window.scrollY > window.innerHeight * 0.2) return;
 
-      // Define zona clicável: entre 30% e 90% da altura (onde estão headline e botão)
-      const zoneStart = rect.height * 0.3;
+      const rect = hero.getBoundingClientRect();
+      const y = e.clientY - rect.top;
+
+      // Define faixa da área clicável (entre headline e botão)
+      const zoneStart = rect.height * 0.25;
       const zoneEnd = rect.height * 0.9;
 
-      // Se o clique estiver dentro da zona, rola suavemente até #oque
+      // Se o clique estiver dentro da zona, faz o scroll
       if (y >= zoneStart && y <= zoneEnd) {
         e.preventDefault();
         target.scrollIntoView({ behavior: "smooth" });
