--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -130,6 +130,37 @@
 
 
 
+
+<!-- Notas de dinheiro sobre o HERO -->
+<div class="absolute inset-0 pointer-events-none z-20">
+  <!-- Nota canto superior direito -->
+  <img src="https://i.imgur.com/y3gEyJ5.png" 
+       alt="Nota de dinheiro" 
+       class="absolute top-6 right-6 w-32 opacity-80 rotate-6 animate-float" />
+
+  <!-- Nota canto inferior esquerdo -->
+  <img src="https://i.imgur.com/op6Rtye.png" 
+       alt="Nota de dinheiro" 
+       class="absolute bottom-4 left-6 w-28 opacity-80 -rotate-3 animate-float-delay" />
+</div>
+
+<style>
+@keyframes floatMoney {
+  0%, 100% { transform: translateY(0) rotate(0deg); }
+  50% { transform: translateY(-10px) rotate(2deg); }
+}
+.animate-float {
+  animation: floatMoney 6s ease-in-out infinite;
+}
+.animate-float-delay {
+  animation: floatMoney 7s ease-in-out infinite;
+  animation-delay: 1.5s;
+}
+</style>
+
+
+
+
 <!--   IMAGENS HERO
 mão na boca: https://i.imgur.com/rE9pIj5.png      
 saco de dinheiro: https://i.imgur.com/0lYJNhC.png 
@@ -149,9 +180,18 @@ mão manipulado: https://i.imgur.com/o4XQhvi.png
     src="https://i.imgur.com/GQhgSxH.png"      
     class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom-sutil"
   />
+
+     <!-- Notas de dinheiro sobre o HERO -->
+      <div class="absolute inset-0 pointer-events-none z-20">
+        <img src="https://i.imgur.com/y3gEyJ5.png" 
+             class="absolute top-6 right-6 w-32 opacity-80 rotate-6 animate-float" />
+        <img src="https://i.imgur.com/op6Rtye.png" 
+             class="absolute bottom-4 left-6 w-28 opacity-80 -rotate-3 animate-float-delay" />
+      </div>
+
 </div>
 
-<!-- Animação personalizada -->
+<!-- Animação personalizada
 <style>
 @keyframes zoomInOutSutil {
   0%, 100% {
@@ -166,7 +206,7 @@ mão manipulado: https://i.imgur.com/o4XQhvi.png
   animation: zoomInOutSutil 6s ease-in-out infinite;
 }
 </style>
-
+-->
 
 
  <!-- Texto -->
