--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -169,27 +169,29 @@ mão manipulado: https://i.imgur.com/o4XQhvi.png
 
 
 
-<!-- HERO -->
 
+<!-- HERO -->
 <section class="relative px-6 pt-12 pb-4 lg:pt-16 lg:pb-4 bg-black">
   <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 items-center gap-10">
  
-<!-- Imagem HERO --> 
-<div class="flex justify-center lg:order-2">
-  <img 
-    src="https://i.imgur.com/GQhgSxH.png"      
-    class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom-sutil"
-  />
+    <!-- Imagem HERO --> 
+    <div class="flex justify-center lg:order-2 relative">
+      <img 
+        src="https://i.imgur.com/GQhgSxH.png"      
+        class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom-sutil"
+      />
 
-     <!-- Notas de dinheiro sobre o HERO -->
+      <!-- Notas de dinheiro sobre o HERO -->
       <div class="absolute inset-0 pointer-events-none z-20">
         <img src="https://i.imgur.com/y3gEyJ5.png" 
              class="absolute top-6 right-6 w-32 opacity-80 rotate-6 animate-float" />
         <img src="https://i.imgur.com/op6Rtye.png" 
              class="absolute bottom-4 left-6 w-28 opacity-80 -rotate-3 animate-float-delay" />
       </div>
+    </div>
 
-</div>
+
+
 
 <!-- Animação personalizada
 <style>
