--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -145,13 +145,11 @@
 
       <!-- Nota canto superior direito -->
       <img src="https://i.imgur.com/y3gEyJ5.png" 
-           alt="Nota de dinheiro" 
-           class="absolute top-0 right-[-30px] lg:right-[-60px] w-32 lg:w-40 opacity-80 rotate-6 animate-float z-20" />
+      class="absolute top-0 right-[-30px] lg:right-[-60px] w-32 lg:w-40 opacity-80 rotate-6 animate-float z-20" />
 
       <!-- Nota canto esquerdo (mais alta agora) -->
-      <img src="https://i.imgur.com/op6Rtye.png" 
-           alt="Nota de dinheiro" 
-           class="absolute bottom-[40px] lg:bottom-[100px] left-[-20px] lg:left-[-60px] w-28 lg:w-36 opacity-80 -rotate-3 animate-float-delay z-20" />
+      <img src="https://i.imgur.com/op6Rtye.png" class="absolute left-[-20px] lg:left-[-60px] w-28 lg:w-36 opacity-80 -rotate-3 animate-float-delay z-20" style="bottom: 130px; /* mobile padrão */
+            @media (min-width:1024px){ bottom: 100px !important; }" />
     </div>
 
     <!-- Texto HERO -->
