--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -139,9 +139,9 @@
     <!-- Imagem HERO com notas sobrepostas  https://i.imgur.com/rE9pIj5.png  https://i.imgur.com/0lYJNhC.png  https://i.imgur.com/o4XQhvi.png-->
     <div class="flex justify-center lg:order-2 relative">
       <img 
-        src="https://i.imgur.com/GQhgSxH.png"      
-        class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom-sutil relative z-10"
-      />
+    src="https://i.imgur.com/GQhgSxH.png"      
+    class="w-[90%] max-w-sm lg:max-w-md object-contain animate-zoom-sutil relative z-10 mt-8 sm:mt-10 lg:mt-0"
+    />
 
       <!-- Nota canto superior direito -->
       <img src="https://i.imgur.com/y3gEyJ5.png" 
